# Regions

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  api_test.py  demo.py  main.py  main_old.py  params.json  pylintrc  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codacy.yml  codeql.yml  delete_deployments.yml  flow_editor.yml  pylint.yml  python-publish.yml  scorecard.yml
docs/: Dynamic RAG Storage, Indexing and Retrieval System.md
examples/: demo.py  demo_executions.json  demo_full_state.json  demo_regions.json  demo_with_infrastructure.py  dynamic_rag_example.py  i_know_poem.txt  lit_demo.py  lit_demo_regions.json  regions.json
examples/default_mode_network/: README.md  dmn.py  dmn_executions.json  dmn_executions_obfuscated.json  dmn_full_state.json  dmn_full_state_obfuscated.json  dmn_multi_cycle.py  dmn_rag.db  dmn_regions.json  dmn_regions_obfuscated.json  dmn_test_entries.json
examples/default_mode_network/sample_results/: dmn_inference.md  dmn_trace.md
examples/double_hegel/: README.md  double_hegel_demo.py  double_hegel_executions.json  double_hegel_regions.json  double_hegel_state.json
examples/double_hegel/sample_results/: readme_crit.md  readme_trace.md
examples/lit_crit/: lit_demo.py  lit_demo_executions.json  lit_demo_state.json
examples/lit_crit/sample_results/: lit_crit.md  lit_crit_trace.md
examples/lookup/: lookup_demo.py  lookup_infra_demo.py
examples/lookup_synthesis/: lookup_synthesis_infra_demo.py
examples/refine/: refine_demo.py  refine_executions.json  refine_full_state.json  refine_regions.json
examples/shared/: demo_biography_docs.json  demo_historical_docs.json  demo_params.json
gui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
gui/src/: App.jsx
modules/: config.py  cross_verify.py  database_manager.py  dynamic_rag.py  embedding_client.py  exceptions.py  executor.py  injector.py  listener_gui.py  llamacpp_api.py  llmlink.py  logutils.py  neural_region.py  orchestrator.py  postmaster.py  region.py  region_registry.py  region_types.py  stringutils.py  testutils.py  tools_test.py  utils.py  verify.py
modules/regions/: base_region.py  broadcast_region.py  feed_forward_region.py  listener_region.py  rag_region.py  region.py
scratch/: neural_region_scratch.py  test_requests.py
tests/: async_test.py  cross_verify_test.py  mock_regions.py  pytest.ini  test_baseregion.py  test_cross_verify.py  test_database.py  test_dynamicrag.py  test_error.py  test_executor.py  test_injector.py  test_listener.py  test_llmlink.py  test_orchestrator.py  test_params.json  test_postmaster.py  test_rag.py  test_ragregion.py  test_region.py  test_region_registry.py  test_verify.py
(+10 files in other folders)
