[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "dibrale_regions"
version = "0.2.0"
authors = [
  { name="Alexander Dibrov", email="alexander@admedicalcorp.com" },
]
description = "Local-by-design agent orchestration for resource-constrained environments"
keywords = ["LLM", "local", "agent", "edge", "workflow", "node"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries"
]
license = "MIT"
license-files = ["LICENSE.txt"]
[tool.setuptools.packages.find]
    where = ["."]
    exclude = [
        "examples*",
        "gui*",
        "scratch*",
    ]
[project.urls]
Homepage = "https://github.com/dibrale/Regions"
Issues = "https://github.com/dibrale/Regions/issues"

